--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,20 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Base Debug",
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceFolder}/cmd/woody_ear/main.go"
+            "program": "${workspaceFolder}/cmd/woody_ear/main.go",
+            "env": {
+                "VOSK_PATH": "${workspaceFolder}/",
+                "DYLD_LIBRARY_PATH": "${workspaceFolder}"
+            },
+            "args": [
+                "--libvosk", "${workspaceFolder}/libvosk.dylib"
+            ]
         }
     ]
 }
